examples/test/testpolicy14776.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14776
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key2: value45
      key28: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value2
          key5: value31
          key31: value46
      podSelector:
        matchLabels:
          key34: value30
          key15: value33
          key35: value40
